[CRD iOS] Prevent crash for accessing _session after the session is disconnected

_session is only valid when the session is connected. This CL adds tests
before using _session in RemotingClient.

Bug: 831954
Change-Id: I0f12221f2c80b55d0a784dc8771fbec573fd1deb
Reviewed-on: https://chromium-review.googlesource.com/1010917
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550438}
Former-commit-id: 6a647c7f3332d5d643f0c38e063f3f09730169bc